--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,11 @@
 title: CARPE DIEM
 theme: minima
+paginate: 8
+url: id0o0bi.github.com
+feed: no
+author: id0o0bi
+aubout:  a single man
+follow: id0o0bi
+indexContent: true
+blogName: id0o0bi
+copyright: 2017-2020
